testsuite/tests/saks/should_fail/T16756b.stderr

T16756b.hs:8:1: error:
    • Couldn't match expected kind: TYPE ('GHC.Types.BoxedRep t0)
                  with actual kind: * -> *
    • In the data type declaration for ‘T’
